# Chatty

./: .env.example  .gitignore  Dockerfile  README.md  pixi.toml  pyproject.toml
chatbot/: config.py  main.py  model_manager.py
chatbot/api/: routes.py  schemas.py
chatbot/core/: database.py  model_manager.py  models.py
tests/: test_api.py  test_auth.py  test_model_manager.py  test_projects.py
